--- a/lamppost-app/src/app/components/authentication/auth-image/auth-image.component.html
+++ b/lamppost-app/src/app/components/authentication/auth-image/auth-image.component.html
@@ -1,3 +1,6 @@
-<section class="auth__image-container flexColumn">
+<section
+  class="auth__image-container flexColumn"
+  [ngStyle]="{ 'background-image': 'url(' + backgroundSrc + ')' }"
+>
   <img [src]="imageSrc" alt="No Lamp" />
 </section>
