--- a/lamppost-app/src/app/components/authentication/auth-page/auth-page.component.scss
+++ b/lamppost-app/src/app/components/authentication/auth-page/auth-page.component.scss
@@ -1,27 +1,43 @@
 .authentication__body {
   height: 100%;
-  background-color: whitesmoke;
   .authentication__card-wrapper {
     width: 50%;
-    height: auto;
+    height: 95%;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+      rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    position: relative;
+    background-color: #8bc6ec;
+    background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
 
     .authentication__forms-container {
       height: 100%;
-      width: 85%;
-      gap: 2rem;
+
       .authentication__forms__header-container {
-        width: 90%;
-        padding: 1rem;
-        border-radius: 10px;
-        font-family: "Source Serif Pro", serif;
-      }
-      .authentication__form-container {
-        height: 70%;
-        width: 100%;
-      }
-      .authenticatiion__forms__controls-container {
         height: 10%;
-        width: 100%;
+        padding: 0rem 5%;
+        justify-content: space-between;
+        .authentication__forms__headings {
+          margin: 0.5rem 0rem;
+          color: white;
+        }
+        .main-heading {
+          letter-spacing: 2px;
+          font-weight: 400;
+        }
+        .subheading {
+          font-weight: 300;
+          text-decoration: overline;
+        }
+      }
+
+      .authentication__forms__controls-container {
+        position: absolute;
+        color: white;
+        bottom: 1%;
+        right: 1%;
       }
     }
   }
@@ -29,6 +45,5 @@
   .authentication__image-container {
     width: 50%;
     height: 100%;
-    background-color: whitesmoke;
   }
 }
