--- a/lamppost-app/src/styles.scss
+++ b/lamppost-app/src/styles.scss
@@ -62,9 +62,15 @@ body {
   height: 100%;
   width: 100%;
   justify-content: flex-start;
-  gap: 1rem;
+  gap: 1.5rem;
   mat-form-field {
-    width: 90%;
+    width: 80%;
     font-family: "Source Serif Pro", serif;
+    .visibility__toogle-icon {
+      cursor: pointer;
+      position: absolute;
+      right: 0px;
+      bottom: 15px;
+    }
   }
 }
