small styling modification

--- a/lamppost-app/src/app/components/authentication/auth-image/auth-image.component.scss
+++ b/lamppost-app/src/app/components/authentication/auth-image/auth-image.component.scss
@@ -2,4 +2,7 @@
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
+  img {
+    filter: brightness(0) invert(1);
+  }
 }
