--- a/lamppost-app/src/app/components/authentication/login/login.component.html
+++ b/lamppost-app/src/app/components/authentication/login/login.component.html
@@ -4,7 +4,7 @@
   class="form flexColumn"
 >
   <mat-form-field>
-    <mat-label>Enter your email</mat-label>
+    <mat-label>Email</mat-label>
     <input
       matInput
       placeholder="mail@example.com"
