--- a/lamppost-app/src/app/components/authentication/auth-image/auth-image.component.scss
+++ b/lamppost-app/src/app/components/authentication/auth-image/auth-image.component.scss
@@ -3,6 +3,6 @@
   background-repeat: no-repeat;
   background-position: center;
   img {
-    filter: brightness(0) invert(1);
+    filter: brightness(0) invert(1) drop-shadow(0px 10px 5px #0000008b);
   }
 }
