--- a/lamppost-app/src/app/components/authentication/auth-page/auth-page.component.scss
+++ b/lamppost-app/src/app/components/authentication/auth-page/auth-page.component.scss
@@ -6,11 +6,9 @@
     margin-left: 1%;
     margin-right: 1%;
     border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
-      rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    box-shadow: var(--box-shadow);
     position: relative;
-    background-color: #8bc6ec;
-    background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+    background-image: var(--background-image);
 
     .authentication__forms-container {
       height: 100%;
