--- a/lamppost-app/src/app/components/homepages/administrator/admin-home/admin-home.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-home/admin-home.component.html
@@ -1,1 +1,4 @@
-<p>admin-home works!</p>
+<section>
+  <app-admin-header [fullname]="fullname"></app-admin-header>
+  <router-outlet></router-outlet>
+</section>
