--- a/lamppost-app/src/styles.scss
+++ b/lamppost-app/src/styles.scss
@@ -46,10 +46,12 @@ body {
   height: 100%;
 }
 body {
+  font-family: "Source Serif Pro", serif;
+}
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Source Serif Pro", serif;
 }
 
 .flexColumn {
