all workers page done

--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/admin-workers.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/admin-workers.component.html
@@ -1,8 +1,10 @@
 <section class="workers__body-wrapper flexRow">
   <div class="workers__edit-container flexColumn">
-    <app-edit-info-card></app-edit-info-card>
+    <app-edit-info-card
+      [selectedUserData]="selectedUserData"
+    ></app-edit-info-card>
   </div>
   <div class="workers__table-container">
-    <app-workers-table></app-workers-table>
+    <app-workers-table (selectUser)="onSelectUser($event)"></app-workers-table>
   </div>
 </section>
