--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.html
@@ -22,26 +22,31 @@
       <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
 
-    <!-- Progress Column -->
+    <!-- Email Column -->
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
       <td mat-cell *matCellDef="let row">{{ row.email }}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Firstname Column -->
     <ng-container matColumnDef="firstname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Firstname</th>
       <td mat-cell *matCellDef="let row">{{ row.firstname }}</td>
     </ng-container>
 
-    <!-- Fruit Column -->
+    <!-- Lastname Column -->
     <ng-container matColumnDef="lastname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Lastname</th>
       <td mat-cell *matCellDef="let row">{{ row.lastname }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      class="hoverRowSelectionEffect"
+      (click)="selectUserFromTable(row)"
+    ></tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
