name and department shifts filters and table initial integration

--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/edit-info-card/edit-info-card.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/edit-info-card/edit-info-card.component.html
@@ -120,6 +120,7 @@
             <mat-icon>check</mat-icon>
           </button>
           <button
+            *ngIf="showDeleteButton"
             mat-mini-fab
             color="warn"
             matTooltip="Delete user"
