--- a/lamppost-app/src/app/components/homepages/administrator/admin-shifts/shifts-table/shifts-table.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-shifts/shifts-table/shifts-table.component.html
@@ -1,7 +1,10 @@
 <header class="workers__table__head flexRow">
   <div class="workers__table__filter-container flexRow">
     <span>Filter: </span>
-    <form [formGroup]="searchFormGroup">
+    <form
+      [formGroup]="searchFormGroup"
+      class="workers__tables__filters__inputs-container flexRow"
+    >
       <input placeholder="Name" #inputName formControlName="byName" />
 
       <input
@@ -9,6 +12,48 @@
         #inputDepartment
         formControlName="byDepartment"
       />
+      <div class="wokers__table__filter__date__picker-wrapper flexRow">
+        <mat-datepicker-toggle
+          matTooltip="Filter Date Range"
+          *ngIf="
+            !searchFormGroup.get('filterStartDate')?.value &&
+            !searchFormGroup.get('filterEndDate')?.value
+          "
+          matIconSuffix
+          [for]="picker"
+        ></mat-datepicker-toggle>
+        <button
+          mat-icon-button
+          class="date__range__clear-button"
+          matTooltip="Clear Date Filter"
+          *ngIf="
+            searchFormGroup.get('filterStartDate')?.value ||
+            searchFormGroup.get('filterEndDate')?.value
+          "
+          (click)="clearDateRange()"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+        <mat-date-range-picker
+          touchUi
+          #picker
+          (closed)="onDateRangePickerClosed()"
+        ></mat-date-range-picker>
+        <mat-date-range-input [rangePicker]="picker">
+          <input
+            matStartDate
+            placeholder="Start date"
+            readonly
+            formControlName="filterStartDate"
+          />
+          <input
+            matEndDate
+            placeholder="End date"
+            readonly
+            formControlName="filterEndDate"
+          />
+        </mat-date-range-input>
+      </div>
     </form>
   </div>
 
@@ -73,7 +118,7 @@
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell">No shift found for worker {{ inputName.value }}"</td>
+      <td class="mat-cell">No shift found for the applied filter</td>
     </tr>
   </table>
 </div>
