--- a/lamppost-app/src/app/components/homepages/administrator/admin-shifts/shifts-table/shifts-table.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-shifts/shifts-table/shifts-table.component.scss
@@ -1,23 +1,39 @@
 .workers__table__head {
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0.25rem 1rem;
   background-image: var(--background-image);
   border-radius: 5px;
   box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
     rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
   .workers__table__filter-container {
     gap: 0.5rem;
+    width: fit-content;
     span {
       font-family: "Source Serif Pro", serif;
       letter-spacing: 1.5px;
       font-weight: 600;
     }
-    input {
-      font-family: "Source Serif Pro", serif;
-      background-color: transparent;
-      border: none;
-      outline: none;
-      border-bottom: 1px solid black;
+    .workers__tables__filters__inputs-container {
+      gap: 1rem;
+      input {
+        font-family: "Source Serif Pro", serif;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        border-bottom: 1px solid black;
+      }
+      .wokers__table__filter__date__picker-wrapper {
+        gap: 0.2rem;
+        input {
+          font-family: "Source Serif Pro", serif;
+          cursor: default;
+          border: none;
+        }
+        .date__range__clear-button {
+          cursor: pointer;
+        }
+      }
     }
   }
   .workers__table__paginator {
