guard for components and other modifications

--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.html
@@ -22,6 +22,7 @@
       [routerLink]="nav.path"
       *ngFor="let nav of navLinks"
       color="primary"
+      class="header__navigation__button"
     >
       <mat-icon>{{ nav.icon }}</mat-icon>
       {{ nav.name }}
