--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/edit-info-card/edit-info-card.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/edit-info-card/edit-info-card.component.html
@@ -32,9 +32,8 @@
           <mat-label class="edit__label">Email</mat-label>
           <input
             matInput
-            placeholder="pat@example.com"
             formControlName="email"
-            class="edit__inputStyle"
+            class="email__inputStyle"
             readonly="true"
           />
         </mat-form-field>
@@ -42,7 +41,6 @@
           <mat-label class="edit__label">Edit firstname</mat-label>
           <input
             matInput
-            placeholder="pat@example.com"
             formControlName="firstname"
             required
             class="edit__inputStyle"
@@ -63,7 +61,6 @@
           <mat-label class="edit__label">Edit lastname</mat-label>
           <input
             matInput
-            placeholder="pat@example.com"
             formControlName="lastname"
             required
             class="edit__inputStyle"
@@ -84,7 +81,6 @@
           <mat-label class="edit__label">Edit age</mat-label>
           <input
             matInput
-            placeholder="pat@example.com"
             formControlName="age"
             required
             class="edit__inputStyle"
