--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
@@ -48,7 +48,7 @@
   .header__navigation-container {
     width: 100%;
     justify-content: space-around;
-    a {
+    .header__navigation__button {
       font-size: 1rem;
     }
   }
@@ -62,8 +62,6 @@
       font-size: 1rem;
       font-family: "Source Serif Pro", serif;
       color: white;
-      text-shadow: rgba(0, 0, 0, 0.5) -1px 0, rgba(0, 0, 0, 0.3) 0 -1px,
-        rgba(255, 255, 255, 0.5) 0 1px, rgba(0, 0, 0, 0.3) -1px -2px;
       height: 100%;
       p {
         margin: 0;
