--- a/lamppost-app/src/app/components/homepages/administrator/admin-shifts/admin-shifts.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-shifts/admin-shifts.component.html
@@ -1,3 +1,3 @@
 <section>
-  <app-shifts-table></app-shifts-table>
+  <app-shifts-table (selectedShift)="onSelectShift($event)"></app-shifts-table>
 </section>
