--- a/lamppost-app/src/app/components/homepages/administrator/admin-shifts/shifts-table/shifts-table.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-shifts/shifts-table/shifts-table.component.html
@@ -15,6 +15,7 @@
       <div class="wokers__table__filter__date__picker-wrapper flexRow">
         <mat-datepicker-toggle
           matTooltip="Filter Date Range"
+          matTooltipPosition="right"
           *ngIf="
             !searchFormGroup.get('filterStartDate')?.value &&
             !searchFormGroup.get('filterEndDate')?.value
@@ -58,7 +59,7 @@
   </div>
 
   <mat-paginator
-    [pageSizeOptions]="[5, 10, 25, 100]"
+    [pageSizeOptions]="[10, 25, 100]"
     aria-label="Select page of users"
     class="workers__table__paginator"
   ></mat-paginator>
