--- a/lamppost-app/src/app/components/homepages/user/user-home/user-home.component.html
+++ b/lamppost-app/src/app/components/homepages/user/user-home/user-home.component.html
@@ -16,10 +16,10 @@
   <br />
   <span>Department</span>
   <select formControlName="shiftDepartment">
-    <option value="">HR</option>
-    <option value="">ASSETS</option>
-    <option value="">DEV</option>
-    <option value="">PROD</option>
+    <option value="HR">HR</option>
+    <option value="ASSETS">ASSETS</option>
+    <option value="DEV">DEV</option>
+    <option value="PROD">PROD</option>
   </select>
   <br />
   <span>Comments</span>
