--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.html
@@ -8,7 +8,7 @@
     />
   </div>
   <mat-paginator
-    [pageSizeOptions]="[5, 10, 25, 100]"
+    [pageSizeOptions]="[10, 25, 100]"
     aria-label="Select page of users"
     class="workers__table__paginator"
   ></mat-paginator>
