added nav button for overview page

--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.html
@@ -20,7 +20,7 @@
       mat-fab
       extended
       [routerLink]="nav.path"
-      *ngFor="let nav of navLinks"
+      *ngFor="let nav of navLinks; let i = index"
       color="primary"
       class="header__navigation__button"
     >
