--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
@@ -50,6 +50,12 @@
     justify-content: space-around;
     .header__navigation__button {
       font-size: 1rem;
+      &:nth-of-type(2) {
+        * {
+          margin: 0 !important;
+          border-radius: 100px !important;
+        }
+      }
     }
   }
   .header__info__logout-container {
