overview page designing done

--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/admin-workers.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/admin-workers.component.html
@@ -1,4 +1,4 @@
-<section class="workers__body-wrapper flexRow">
+<section class="main__body workers__body-wrapper flexRow">
   <div class="workers__edit-container flexColumn">
     <app-edit-info-card
       [selectedUserData]="selectedUserData"
