--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
@@ -19,13 +19,12 @@
       width: 35%;
       .header__logo-style {
         width: 60px;
-        aspect-ratio: 1;
         filter: brightness(0) invert(1) drop-shadow(0px 10px 5px #0000008b);
         transition: all 220ms ease-in-out;
 
         &:hover {
-          scale: 1.1;
           cursor: pointer;
+          filter: brightness(0) invert(1) drop-shadow(0px -5px 5px #fff9d8);
           transition: all 220ms ease-in-out;
         }
       }
