--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.html
@@ -1,1 +1,15 @@
-<p>admin-overview works!</p>
+<section class="main__body overview__section-wrapper flexColumn">
+  <main class="overview__statistics-wrapper flexColumn">
+    <div class="overview__cards-container flexRow">
+      <app-most-shifts-card
+        class="overview__card-component most__shifts__card"
+      ></app-most-shifts-card>
+      <app-past-shifts-card
+        class="overview__card-component past__shifts__card"
+      ></app-past-shifts-card>
+    </div>
+    <app-highest-earnings-summary-display
+      class="overview__summary-container"
+    ></app-highest-earnings-summary-display>
+  </main>
+</section>
