--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.html
@@ -40,7 +40,7 @@
       <td mat-cell *matCellDef="let row">{{ row.lastname }}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr
       mat-row
       *matRowDef="let row; columns: displayedColumns"
