--- a/lamppost-app/src/styles.scss
+++ b/lamppost-app/src/styles.scss
@@ -81,6 +81,9 @@ body {
     }
   }
 }
+.main__body {
+  height: 90vh;
+}
 .cdk-overlay-dark-backdrop {
   background: rgba(0, 0, 0, 0.75) !important;
 }
