overview- employee of the month card done

--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/most-shifts-card/most-shifts-card.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/most-shifts-card/most-shifts-card.component.html
@@ -1,7 +1,7 @@
 <section class="most__shifts__card-container">
   <header class="most__shifts__card__title-container flexColumn">
     <h1 [innerHTML]="cardTitle" class="most__shifts__card-title"></h1>
-    <p>Month Placeholder</p>
+    <p>{{ monthName }}</p>
   </header>
   <div class="most__shifts__card__display-conatiner flexColumn">
     <div class="display-wrapper flexColumn">
@@ -11,6 +11,6 @@
   </div>
   <div class="most__shifts__card__info-container flexColumn">
     <p>Employee's fullname :</p>
-    <p>Placeholder</p>
+    <p>{{ employeeName }}</p>
   </div>
 </section>
