--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.html
@@ -2,6 +2,10 @@
   <main class="overview__statistics-wrapper flexColumn">
     <div class="overview__cards-container flexRow">
       <app-most-shifts-card
+        *ngIf="employeeOfTheMonth"
+        [employeeName]="employeeOfTheMonth.fullname!"
+        [monthName]="employeeOfTheMonth.month!"
+        [mostShiftsNumber]="employeeOfTheMonth!.totalShifts"
         class="overview__card-component most__shifts__card"
       ></app-most-shifts-card>
       <app-past-shifts-card
