--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.html
@@ -33,7 +33,7 @@
 
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell">
-            No data matching the filter "{{ input.value }}"
+            No name matching the filter " {{ input.value }} "
           </td>
         </tr>
       </table>
