--- a/lamppost-app/src/styles.scss
+++ b/lamppost-app/src/styles.scss
@@ -37,7 +37,11 @@ $lamppost-app-theme: mat.define-light-theme(
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 :root {
-  --background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+  --background-image: linear-gradient(
+    135deg,
+    #8bc6ec 0%,
+    rgb(149, 153, 226) 100%
+  );
   --box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
@@ -102,4 +106,16 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
   -moz-appearance: textfield;
+}
+.mat-mdc-snack-bar-container {
+  --mat-mdc-snack-bar-button-color: #ffffff;
+  --mdc-snackbar-supporting-text-color: #ffffff;
+
+  &.red-snackbar {
+    --mdc-snackbar-container-color: rgba(226, 52, 52, 0.85);
+  }
+
+  &.green-snackbar {
+    --mdc-snackbar-container-color: rgb(149, 153, 226);
+  }
 }
