--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.scss
@@ -1,8 +1,10 @@
 .overview__section-wrapper {
+  position: relative;
   .overview__statistics-wrapper {
     width: 65%;
     height: 90%;
     gap: 1.5rem;
+
     .overview__cards-container {
       box-shadow: rgb(204, 219, 232) -3px -3px 6px 0px inset,
         rgba(255, 255, 255, 0.5) -3px -3px 6px 0px inset,
@@ -11,7 +13,7 @@
       width: 100%;
       border-radius: 25px;
       .overview__card-component {
-        width: 100%;
+        width: 50%;
         height: 100%;
       }
       .most__shifts__card {
@@ -23,6 +25,11 @@
       .past__shifts__card {
         padding: 0rem 1rem;
       }
+      .overview__no__data-msg {
+        font-size: 1.5rem;
+        font-family: "Source Serif Pro", serif !important;
+        text-decoration: overline;
+      }
     }
     .overview__summary-container {
       height: 15%;
@@ -33,5 +40,11 @@
       box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
         rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     }
+  }
+  .loader__item {
+    z-index: 150;
+    width: 100%;
+    height: 100%;
+    position: absolute;
   }
 }
