--- a/lamppost-app/src/app/components/homepages/administrator/admin-shifts/edit-shift-overlay/edit-shift-overlay.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-shifts/edit-shift-overlay/edit-shift-overlay.component.scss
@@ -7,10 +7,14 @@ h2 {
   padding: 1rem;
   overflow: hidden;
   height: 100%;
+  .dialog__edit__shift__form {
+    gap: 0.5rem;
+  }
 }
 .dialog__controls-container {
   justify-content: space-around;
-  padding-bottom: 2rem;
+  padding-bottom: 2.5rem;
+
   button {
     transition: all 220ms ease-in-out;
 
@@ -20,9 +24,7 @@ h2 {
     }
   }
 }
-.name__inputStyle {
-  border: none;
-  outline: none;
+.info__inputStyle {
   user-select: none;
   cursor: default;
 }
