small fixes for overview component

--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.scss
@@ -1,5 +1,6 @@
 .past__shifts__card-wrapper {
   height: 100%;
+  cursor: default;
   .past__shifts__card__title-container {
     height: 10%;
     padding-top: 1rem;
