--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.html
@@ -9,19 +9,14 @@
     </div>
 
     <div class="shifts__table-wrapper mat-elevation-z8">
-      <table
-        mat-table
-        [dataSource]="dataSource"
-        matSort
-        class="past__shifts__table"
-      >
+      <table mat-table [dataSource]="dataSource" class="past__shifts__table">
         <ng-container matColumnDef="fullname">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Worker Name</th>
+          <th mat-header-cell *matHeaderCellDef>Worker Name</th>
           <td mat-cell *matCellDef="let row">{{ row.fullname }}</td>
         </ng-container>
 
         <ng-container matColumnDef="shiftDate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+          <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let row">{{ row.shiftDate }}</td>
         </ng-container>
 
